--- a/clone-app/package.json
+++ b/clone-app/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-tailwind": "^0.0.4"
   }
 }
