--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.22.1"
   }
 }
